2011-10-04  Peter Bloomfield

	* src/balsa-mime-widget-text.c (bm_widget_new_vcard): migrate
	from GtkTable to GtkGrid.

2011-10-04  Peter Bloomfield

	* src/address-book-config.c (add_radio_buttons),
	(create_local_dialog), (create_externq_dialog),
	(create_ldap_dialog), (create_gpe_dialog): migrate from GtkTable
	to GtkGrid.

2011-10-04  Peter Bloomfield

	* src/ab-window.c (balsa_ab_window_init): migrate from GtkTable
	to GtkGrid.

2011-10-03  Peter Bloomfield

	Migrate from GtkTable to GtkGrid

	* libinit_balsa/assistant_helper.c (balsa_init_add_grid_entry),
	(balsa_init_add_grid_option), (balsa_init_add_grid_checkbox):
	* libinit_balsa/assistant_helper.h:
	* libinit_balsa/assistant_page_directory.c
	(balsa_druid_page_directory_init):
	* libinit_balsa/assistant_page_user.c (balsa_druid_page_user_init):

2011-10-03  Peter Bloomfield

	* libbalsa/smtp-server.c (smtp_server_add_widget),
	(libbalsa_smtp_server_dialog): migrate from GtkTable to GtkGrid.

2011-10-03  Peter Bloomfield

	* libbalsa/identity.c (append_ident_notebook_page),
	(setup_ident_frame), (ident_dialog_add_checkbutton),
	(ident_dialog_add_check_and_entry), (ident_dialog_add_entry),
	(ident_dialog_add_file_chooser_button), (ident_dialog_add_boxes),
	(ident_dialog_add_gpg_menu), (ident_dialog_add_smtp_menu):
	migrate from GtkTable to GtkGrid.

2011-10-03  Peter Bloomfield

	* libbalsa/address.c (libbalsa_address_get_edit_widget): migrate
	from GtkTable to GtkGrid.

2011-10-03  Peter Bloomfield

	* libbalsa/misc.c (libbalsa_create_grid),
	(libbalsa_create_grid_label), (libbalsa_create_grid_check),
	(libbalsa_create_grid_entry), (lb_create_size_group_func):
	new GtkGrid helpers.
	* libbalsa/misc.h: export them.

2011-10-03  Peter Bloomfield

	* src/pref-manager.c (remote_mailbox_servers_group),
	(address_books_group), (address_book_add_cb), (server_add_cb),
	(server_add_menu_widget): do not leak menus.

2011-10-02  Peter Bloomfield

	* src/pref-manager.c (address_book_add_cb), (server_add_cb): do